--- a/ticketmaster/src/App.css
+++ b/ticketmaster/src/App.css
@@ -3,40 +3,37 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 } */
+
+
+h1 {
+  background-color: rgb(84, 149, 206);
+}
+
+.nav {
+  background-color: brown;
+}
+
+Card {
+ margin: auto;
+}
+
+.event-details-page {
+  margin: auto;
+  text-align: center;
+}
+
+.event-img {
+  margin: 10px auto;
+  height: 700px;
+  border: solid 7px goldenrod;
+  border-image: linear-gradient(to bottom, goldenrod, transparent) 1 100%;
+  border-top: solid 7px goldenrod;
+
+}
+
+.event-img img {
+  width: 100%;
+  height: 100%;
+  border-top: goldenrod solid 7px;
+}
